[package]
name = "xsteamrs"
version = "0.1.0"
edition = "2024"

description = "IAPWS-IF97 water/steam properties with XSteam-style string-dispatch API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/hzgzh/xsteamrs"
documentation = "https://docs.rs/xsteamrs"
homepage = "https://github.com/hzgzh/xsteamrs"
readme = "README.md"
keywords = ["if97", "iapws", "steam", "water", "thermodynamics"]
categories = ["science"]

rust-version = "1.85"

[dependencies]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
